# amrc-connectivity-stack

./: .dockerignore  .env.example  .env.testing  .eslintrc.yaml  .gitignore  .gitmodules  .phpstorm.meta.php  CLAUDE.md  Chart.yaml  ContributorGuidelines.md  Device_Connection.json  Dockerfile  Dockerfile.base  Dockerfile.js-build  Dockerfile.pg-build  Dockerfile.pg-run  Edge_Agent_Config.json  LICENSE  Makefile  PROCESS.md  README.md  ReleaseNotes.md  SECURITY.md  Translation_App_Config.json  _ide_helper.php  app.ts  build.sh  composer.json  config.mk  docker-compose.yml  docker-compose.yml.bak  eslint.config.mjs  fry-acs_kubeconfig.yaml  fry-values.yaml  get-keytab.sh  notes.md  package-lock.json  package.json  pom.xml  ray.php  (+14 more)
.githooks/: README.md  pre-commit
.playwright-mcp/: page-2026-04-09T14-06-05-723Z.yml  page-2026-04-09T14-26-25-851Z.yml  page-2026-04-09T14-28-12-726Z.yml  page-2026-04-09T14-31-34-823Z.yml  page-2026-04-09T14-34-15-074Z.yml  page-2026-04-09T14-34-26-646Z.yml  page-2026-04-09T14-35-20-642Z.yml  page-2026-04-09T14-36-46-148Z.yml  page-2026-04-09T14-37-17-834Z.yml  page-2026-04-09T14-37-38-595Z.yml  page-2026-04-09T14-39-20-553Z.yml  page-2026-04-09T14-39-45-436Z.yml  page-2026-04-09T14-41-49-078Z.yml  page-2026-04-09T14-43-18-936Z.yml  page-2026-04-09T14-43-52-761Z.yml  page-2026-04-09T14-46-08-456Z.yml  page-2026-04-09T14-47-45-367Z.yml  page-2026-04-09T14-48-25-059Z.yml  page-2026-04-09T15-00-13-123Z.yml  page-2026-04-09T15-00-30-869Z.yml  page-2026-04-09T15-00-59-629Z.yml  page-2026-04-09T15-02-18-321Z.yml  page-2026-04-09T15-02-38-195Z.yml  page-2026-04-09T15-07-29-082Z.yml  page-2026-04-09T15-08-24-815Z.yml
3D_Printer/: 3D_Printer-v1.json  3D_Printer-v2.json  Axis-v1.json  Extruder-v1.json  Job_Info-v1.json  Material_Info-v1.json  Material_Info-v2.json  Oven-v1.json  Printer_Components-v1.json
AGV/: AGV-v1.json  Job-v1.json
CMM/: CMM-v1.json
CNC/: Axis-v1.json  CNC-v1.json  Channel-v1.json  Device_Information-v1.json  Spindle-v1.json
Cell/: Cell-v1.json  Emergency_Stop-v1.json  Protective_Stop-v1.json
Coffee_Machine/: Bean_Hopper-v1.json  Bean_Hopper.json  Touch_Screen-v1.json  Touch_Screen.json
Common/: Additional_Sensors-v1.json  Alert-v1.json  Alerts-v1.json  Axis-v1.json  Commanded_Value-v1.json  Device_Information-v1.json  End_Effector-v1.json  Hierarchy-v1.json  Light-v1.json  Link-v1.json  Links-v1.json  Message-v1.json  Metric-v1.json  Pose-v1.json  Program-v1.json  Spatial_Position-v1.json  Stack_Light-v1.json  Time-v1.json
Edge_Agent/: Edge_Agent-v1.json
Electrical_Grid/: Carbon_Intensity-v1.json  (+4 more)
lib/js-gssapi/: CMakeLists.txt  LICENSE  README.md  package.json
lib/js-gssapi/src/: .clang-format  bind.cc  bind.h  gss_impl.h  krb_impl.h  module.cc
lib/py-edge-driver/: .gitignore  LICENSE  README.md  pyproject.toml
lib/py-edge-driver/examples/: test_driver.py
lib/py-edge-driver/src/amrc/factoryplus/edge_driver/: __init__.py  async_driver.py  bufferx.py  debug.py  driver.py  handler.py  handler_protocol.py  polled_driver.py
lib/py-edge-driver/src/py_edge_driver/: __init__.py  async_driver.py  bufferx.py  debug.py  driver.py  handler_protocol.py  polled_driver.py
lib/py-edge-driver/tests/: test_bufferx.py  test_driver.py
lib/rs-edge-driver/: Cargo.toml
lib/rs-edge-driver/examples/: test_driver.rs
lib/rs-edge-driver/src/: config.rs  driver.rs  error.rs  handler.rs  lib.rs  status.rs
(+3108 files in other folders)
