[package]
name = "rs-edge-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytes = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rumqttc = "0.24"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
url = "2"

[dev-dependencies]
tracing-subscriber = "0.3"

[[example]]
name = "test_driver"
path = "examples/test_driver.rs"
